Removed BB and text feature
