# api/src/api/cut.py
@@ -20,15 +20,11 @@ def post():
                 return jsonify(make_response(True, message=f'{required_parameters} body parameters are required.')), 400
 
             if not all(o in COCO_INSTANCE_CATEGORY_NAMES for o in body['objects']):
-                return jsonify(make_response(True, message='One or more objects from the list will not be detected.')), 400
+                return jsonify(make_response(True, message='Some objects from the list will not be detected.')), 400
 
             if bool('image_url' in body) == bool('image_base64' in body):
                 return jsonify(make_response(True, message='image_url (x)or image_base64 has to be specified')), 400
 
-            if 'return_bounding_box' not in body:
-                body['return_bounding_box'] = False
-            if 'return_text' not in body:
-                body['return_text'] = False
             if 'return_white_bg' not in body:
                 body['return_white_bg'] = False
 
@@ -44,9 +40,7 @@ def post():
                 return jsonify(make_response(True, message='Wrong image specified.')), 400
 
         with Timer('Generate image'):
-            output_image_path = instance_segmentation_api(
-                image_path, body['objects'], body['return_bounding_box'], body['return_text']
-            )
+            output_image_path = instance_segmentation_api(image_path, body['objects'])
 
         with Timer('Removing white color'):
             if not body['return_white_bg']:
